add_subdirectory(parsing/basic-loop)
add_subdirectory(parsing/nested-struct)
add_subdirectory(parsing/bitwise-op)
add_subdirectory(parsing/try-catch)
add_subdirectory(parsing/varargs)
add_subdirectory(parsing/type-sizes)
add_subdirectory(parsing/mem-ops)
add_subdirectory(parsing/aggregate-in-reg)
add_subdirectory(parsing/empty-function-body)
add_subdirectory(parsing/bool-op-llvm-select)
add_subdirectory(parsing/bitwise-cond/1)
add_subdirectory(parsing/bitwise-cond/2)
add_subdirectory(parsing/array_localvar/1)
add_subdirectory(parsing/array_localvar/2)
add_subdirectory(parsing/non-term/1)
add_subdirectory(parsing/non-term/2)
add_subdirectory(parsing/undef)
add_subdirectory(parsing/gv-init)
add_subdirectory(parsing/call-args)
add_subdirectory(parsing/vla)
add_subdirectory(parsing/src-lines/1)
add_subdirectory(cfg-trans/llvm-phi/1)
add_subdirectory(cfg-trans/llvm-phi/2)
add_subdirectory(cfg-trans/llvm-phi/3)
add_subdirectory(cfg-trans/llvm-phi/4)
add_subdirectory(cfg-trans/llvm-select)
add_subdirectory(parsing/uid/internal_var)
